--- a/css/base.less
+++ b/css/base.less
@@ -2,6 +2,9 @@
 
 h1, h2, h3, h4, h5, h6 {
   font-family: 'a', sans-serif !important;
+}
+
+.splash-head {
   text-shadow: 0px 0px 10px rgba(0, 0, 0, 0.75);
   color: white;
 }
